Add project knowledge and prompt metadata support